# RTGP_ProjectPortal

./: .gitignore  CMakeLists.txt  README.md
assets/models/: Portal.mtl
include/: Application.h  Input.h  RenderTexture.h
include/Core/: Application.h  Input.h  Material.h  Physics.h  PointLight.h  RenderTexture.h  ResourceManager.h  SceneObject.h  Texture.h
include/utils/: camera.h  mesh.h  model.h  physics.h  shader.h
src/: Application.cpp  Input.cpp  RenderTexture.cpp  imgui.ini  main.cpp
src/Core/: Application.cpp  Input.cpp  Material.cpp  Physics.cpp  PointLight.cpp  RenderTexture.cpp  ResourceManager.cpp  SceneObject.cpp  Texture.cpp  main.cpp
src/shaders/fragment/: 00_basic.frag  globalShader.frag  renderTextureShader.frag
src/shaders/vertex/: 00_basic.vert  globalShader.vert  renderTextureShader.vert
